objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_of_Account__c</fullName>
        <formula>IF( CreatedDate &lt;   NOW()  - 10, &quot;Account is New&quot;, &quot;Account is Old&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IF( Name == &apos;Wipro&apos;, IMAGE(&quot;https://gmailcomsfclass2-dev-ed--c.develop.vf.force.com/resource/1696303392000/Wipro_Logo?&quot;, &quot;Failed to load Image&quot;), &quot;Logo not available&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUmber_of_In_Progress_Oppty__c</fullName>
        <label>NUmber of In Progress Oppty</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Value Proposition, Negotiation/Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>DATEVALUE( NOW() ) -  DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <label>Total Opportunity Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Qualification, Value Proposition</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>MNC</fullName>
        <active>true</active>
        <label>MNC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>